# cjm-transcription-source-select

./: .gitignore  =0.0.7  README.md  cjm.yaml  demo_app.py  html_ids.html  html_ids.html.md  index.html  models.html  models.html.md  plugins_test.yaml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  utils.html  utils.html.md
cjm_transcription_source_select/: _modidx.py  html_ids.py  models.py  utils.py
cjm_transcription_source_select/components/: file_browser_panel.py  helpers.py  preview_panel.py  selection_panel.py  stats_panel.py  step_renderer.py
cjm_transcription_source_select/routes/: browser.py  core.py  init.py  preview.py  selection.py  verify.py
cjm_transcription_source_select/services/: source_select.py
components/: file_browser_panel.html  file_browser_panel.html.md  helpers.html  helpers.html.md  preview_panel.html  preview_panel.html.md  selection_panel.html  selection_panel.html.md  stats_panel.html  stats_panel.html.md  step_renderer.html  step_renderer.html.md
nbs/: html_ids.ipynb  index.ipynb  models.ipynb  nbdev.yml  utils.ipynb
nbs/components/: file_browser_panel.ipynb  helpers.ipynb  preview_panel.ipynb  selection_panel.ipynb  stats_panel.ipynb  step_renderer.ipynb
nbs/routes/: browser.ipynb  core.ipynb  init.ipynb  preview.ipynb  selection.ipynb  verify.ipynb
nbs/services/: source_select.ipynb
routes/: browser.html  browser.html.md  core.html  core.html.md  init.html  init.html.md  preview.html  preview.html.md  selection.html  selection.html.md  verify.html  verify.html.md
services/: source_select.html  source_select.html.md
